added (bad) remark on choice of generator
later should update to make readable

--- a/main.tex
+++ b/main.tex
@@ -1175,6 +1175,11 @@ Thus the result follows from the computations:
 \end{enumerate}
 \end{comment}
 \end{proof}
+
+\begin{remark}\calvin{figure out how to type out better}
+There is some ambiguity in choice of generator of each toris: for instance I could $\alpha \times \alpha^{-1}$ with $\alpha \times \alpha^{-q}$ in the first equality using the coordinate $y_{2n-1}$ instead of $y_{2n}$ for the second coordinate. In the type B,C,D case this ambiguity does not effect our sums since $\chi,\psi$ are defined over $\finiteField$ and hence stable under Frobenius i.e. $q$-th powers. In the type A unitary case, it is important to know which generators are in the first component which is any $y_i$ with $i\leq n$ since our characters $\chi$ take as input these entries.
+\end{remark}
+
 We let $\phi_{B,\lambda_i^+}, \phi_{B,\lambda_i^-}$ denote the $\phi$'s above in cases 1 and 2 respectivitly with $n = |\lambda_i|$. 
 Let $\phi_{U,\lambda_i}$ denote the $\phi$'s above in cases 3 and 4 with $n = |\lambda_i|$.
 
